# travel-assistant

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  TODO.md  main.py  pyproject.toml
docs/: DESIGN.md  GITHUB_SYNC_GUIDE.md  ITINERARY_IMPLEMENTATION_GUIDE.md  ITINERARY_INTEGRATION.md  ITINERARY_QUICKSTART.md  PHASE2_PLAN.md  PROJECT_PLAN.md  README.md  SMART_TEMPLATE_SPEC.md  TECH_STACK.md  TEMPLATES.md  TRANSPORT_ADJUSTMENTS.md  hosting-comparison.md  railway-deployment-guide.md  railway-quickstart.md
examples/: demo_transport.py
src/: __init__.py  models.py  types.py
src/bot/: __init__.py  checklist_check.py  checklist_detail.py  commands.py  schedule_commands.py
src/config/: __init__.py  settings.py
src/core/: __init__.py  github_sync.py  smart_engine.py  transport_rules.py  weather_service.py
src/data/: transport_rules.yaml
src/templates/: base_travel.md  business_long_distance.md  business_short_distance.md  domestic_business.md  leisure_domestic.md
src/templates/modules/: business.md  leisure.md  long_distance.md
src/utils/: __init__.py  logging_config.py  markdown_utils.py
tests/: conftest.py
tests/unit/: __init__.py  test_checklist_check.py  test_commands.py  test_github_sync.py  test_itinerary_models.py  test_markdown_utils.py  test_models.py  test_settings.py  test_simple.py  test_smart_engine.py  test_transport_rules.py  test_weather_service.py
